tdf#167147: Support transparent fill color

Change-Id: I5a38a52f2720f58bc2762d328fb6a5e4090c6dde
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186780
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit 42e566654aa926caf51457b78a3b0dbb81b2f6a2)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186782
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>